# zorigami

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  COPYRIGHT  Cargo.toml  Dockerfile  LICENSE  NOTES.md  README.md  TODO.org  Vagrantfile  analysis_options.yaml  app.js  bsconfig.json  codegen.ts  docker-compose.yml  eslint.config.ts  graphql_schema.json  gulpfile.js  index.html  leptosfmt.toml  package-lock.json  package.json  prettier.config.ts  pubspec.yaml  tsconfig.json  vite.config.ts
android/app/: build.gradle
client/: apollo-provider.tsx  index.tsx
client/assets/: main.scss
client/components/: color-theme.tsx  navbar.tsx  refresh-checkbox.tsx  text-field.tsx
client/hooks/: use-click-outside.ts
client/pages/: datasets.tsx  diffs.tsx  errors.tsx  home.tsx  restore.tsx  settings.tsx  snapshots.tsx  stores.tsx
config/: default.json  test.json
containers/: README.md  docker-compose.yml
database/database_core/: Cargo.toml
database/database_core/src/: lib.rs
database/database_rocks/: Cargo.toml
database/database_rocks/src/: lib.rs
doc/: CHANGES.md  DEPLOY.md  DESIGN.md  HISTORY.md  REPAIR.md  SOLIDJS.md
doc/architecture/decisions/: 0002-use-rust-for-backend.md  0003-use-flutter-for-frontend.md  0004-use-rocksdb.md  0005-use-clean-architecture.md  0006-use-graphql-protocol.md  0007-use-state-management.md  0008-use-riverpod-vs-get_it.md  0009-pack-files-as-7z-archives.md  0010-pack-files-as-tar.md  0011-pack-files-as-exaf.md  0012-chunking-fastcdc.md  0013-use-solidjs.md
doc/specs/: 0001-Bucket-Naming.md  0002-Restore-Testing.md  0003-Error-Capture.md  0004-Database-Scrub.md  0005-Pack-Pruning.md  0006-Support-SQLite.md  0007-Snapshot-Diffing.md  0008-Azure-SDK-Migration.md
docs/design/: README.md  modules.dot
healthcheck/: Cargo.toml
healthcheck/src/: main.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: client_provider.dart  configuration.dart  container.dart  core.js  database.js  engine.js  logging.js  main.dart  navigation_drawer.dart
lib/core/error/: exceptions.dart  (+1 more)
lib/store/: index.js
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
public/: index.html  schema.graphql
public/stylesheets/: style.css
routes/: index.js
server/: Cargo.toml
server/src/: data.rs  domain.rs  lib.rs  main.rs  preso.rs  shared.rs  tasks.rs
server/src/data/: mod.rs  models.rs  repositories.rs  services.rs  sources.rs
server/src/data/models/: checksum.rs  file_counts.rs  mod.rs  pack_location.rs  schedule.rs  tree.rs
server/src/data/repositories/: errors.rs  mod.rs
server/src/data/services/: buckets.rs
server/src/data/sources/: amazon.rs  azure.rs  google.rs  local.rs  minio.rs  mod.rs  rocksdb.rs  sftp.rs  sqlite.rs
server/src/domain/: entities.rs  managers.rs  mod.rs  repositories.rs  services.rs  sources.rs  usecases.rs
server/src/domain/entities/: mod.rs  schedule.rs
server/src/domain/helpers/: crypto.rs  mod.rs  pack.rs  thread_pool.rs
server/src/domain/managers/: backup.rs  mod.rs  process.rs  restore.rs  state.rs
server/src/domain/managers/backup/: driver.rs  mod.rs  scheduler.rs
server/src/domain/repositories/: mod.rs
server/src/domain/services/: buckets.rs
server/src/domain/sources/: mod.rs
server/src/domain/usecases/: cancel_restore.rs  count_snapshots.rs  delete_dataset.rs  delete_store.rs  find_missing.rs  get_counts.rs  get_datasets.rs  get_pack.rs  get_snapshot.rs  get_snapshots.rs  get_stores.rs  get_tree.rs  insert_file.rs  mod.rs  new_dataset.rs  new_store.rs  prune_extra.rs  prune_snapshots.rs  put_back.rs  query_restores.rs  reassign_packs.rs  restore_database.rs  restore_files.rs  restore_missing.rs  scan_file_packs.rs  scan_packs.rs  start_backup.rs  stop_backup.rs  test_store.rs  update_configuration.rs  update_dataset.rs  update_store.rs  verify_snapshot.rs
server/src/preso/: graphql.rs  leptos.rs
server/src/preso/graphql/: mod.rs
server/src/preso/leptos/: datasets.rs  home.rs  mod.rs  nav.rs  stores.rs
server/src/shared/: packs.rs  state.rs  thread_pool.rs
server/src/tasks/: backup.rs  helpers.rs  leader.rs  prune.rs  restore.rs  schedule.rs  state.rs
server/src/tasks/backup/: driver.rs  scheduler.rs
server/src/tasks/helpers/: thread_pool.rs
server/style/: main.scss
server/tests/: backup_manager_test.rs  backup_restore_test.rs  backuper_test.rs  data_sources_test.rs  entity_repository_test.rs  process_manager_test.rs  restore_manager_test.rs  restorer_test.rs  schema_test.rs
server/tests/docker/: docker-compose.yml
src/: Client.re  Config.re  Datasets.re  Greeting.re  Home.re  Index.re  Navbar.re  NotFound.re  Snapshots.re  Stores.re  app.ts  core.rs  core.ts  database.rs  database.ts  engine.rs  engine.ts  lib.rs  logging.ts  main.rs  schedule.rs  schema.rs  server.ts  state.rs  store.rs  supervisor.rs
src/domain/: mod.rs
src/preso/: mod.rs
src/routes/: graphql.ts  index.ts  resolvers.ts
src/store/: index.ts  local.rs  local.ts  minio.rs  minio.ts  sftp.rs  sftp.ts
stores/store_amazon/: Cargo.toml
stores/store_amazon/src/: lib.rs
stores/store_azure/: Cargo.toml
stores/store_azure/src/: lib.rs
stores/store_core/: Cargo.toml
stores/store_google/: Cargo.toml
stores/store_google/src/: lib.rs  storage_v1_types.rs
stores/store_local/: Cargo.toml
stores/store_minio/: Cargo.toml
stores/store_minio/src/: lib.rs
stores/store_sftp/: Cargo.toml
stores/store_sftp/src/: lib.rs
test/: core.js  core.ts  database.js  database.ts  engine.js  engine.ts  queries.ts  store.ts  widget_test.dart
test/docker/: docker-compose.yml
test/fixtures/: fixture_reader.dart  pack_store_bad_kind.json  pack_store_local.json  washington-journal.txt
tests/: backup_manager_test.rs  data_sources_test.rs  database_test.rs  engine_test.rs  process_manager_test.rs  restore_manager_test.rs  schema_test.rs  store_test.rs  supervisor_test.rs  util.rs
tests/docker/: docker-compose.yml
tests/fixtures/: lorem-ipsum.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+181 files in other folders)
