# The new `strip` feature used below is gated behind a feature flag for the
# version of cargo that cargo-outdated was compiled against. Eventually this can
# be removed once cargo-outdated is updated.
cargo-features = ["strip"]

[workspace]
members = [
    "database/database_core",
    "database/database_rocks",
    "server",
    "stores/store_amazon",
    "stores/store_azure",
    "stores/store_core",
    "stores/store_google",
    "stores/store_local",
    "stores/store_minio",
    "stores/store_sftp",
]
exclude = [
    "healthcheck"
]

[profile.release]
strip = "debuginfo"
