[workspace]
members = [
    "database/database_core",
    "database/database_rocks",
    "server",
    "stores/store_amazon",
    "stores/store_azure",
    "stores/store_core",
    "stores/store_google",
    "stores/store_local",
    "stores/store_minio",
    "stores/store_sftp",
]
exclude = [
    "healthcheck"
]
resolver = "2"

[profile.release]
strip = "debuginfo"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
