[workspace]
members = [
    "database/database_core",
    "database/database_rocks",
    "server",
    "stores/store_amazon",
    "stores/store_azure",
    "stores/store_core",
    "stores/store_google",
    "stores/store_local",
    "stores/store_minio",
    "stores/store_sftp",
]
exclude = [
    "healthcheck"
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.55"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-s3 = "1"
dotenvy = "0.15.7"
md-5 = "0.11.0"
openssl = { version = "0.10" }
rand = "0.10.1"
rocksdb = "0.24.0"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1.0.182" }
serial_test = "3.0.0"
tempfile = "3.7.1"
thiserror = "2.0.7"
tokio = { version = "1.46.1" }
uuid = { version = "1.1.2" }
xid = "1.0.3"

[profile.release]
strip = "debuginfo"
