[package]
name = "healthcheck"
version = "1.0.0"
authors = ["Lena Fuhrimann"]
edition = "2021"
description = "Make an HTTP request and exit non-zero if an error occurs."
homepage = "https://github.com/cloudlena/healthcheck"
license = "Apache-2.0"

[dependencies]
reqwest = "0.12.4"
tokio = { version = "1.37.0", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true
