[package]
name = "zorigami"
version = "0.1.0"
authors = ["Nathan Fiedler <nathanfiedler@fastmail.fm>"]
edition = "2024"
description = "Backup and restore application."
repository = "https://github.com/nlfiedler/zorigami"
readme = "README.md"
keywords = ["backup", "archival"]
license = "MIT"

[[bin]]
name = "zorigami"
path = "src/main.rs"

[dependencies]
actix = "0.13.0"
actix-cors = "0.7.0"
actix-files = "0.6.0"
actix-rt = "2.8.0"
actix-web = "4.3.0"
anyhow = "1.0.55"
data-encoding = "2.10.0"
blake3 = "1.5.1"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2.2"
database_core = { path = "../database/database_core" }
database_rocks = { path = "../database/database_rocks" }
dotenvy = "0.15.7"
env_logger = "0.11.0"
exaf-rs = "2.0.0"
fastcdc = "4.0.0"
globset = "0.4.13"
hashed-array-tree = "1.2.0"
juniper = { version = "0.17.0", features = ["chrono", "schema-language"] }
libc = "0.2.119"
log = "0.4.7"
memmap2 = "0.9.4"
os_str_bytes = { version = "7.0.0", features = ["conversions"] }
rand = "0.10.1"
reducer = "3.0"
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.79"
sha1 = "0.10.6"
store_amazon = { path = "../stores/store_amazon" }
store_azure = { path = "../stores/store_azure" }
store_core = { path = "../stores/store_core" }
store_google = { path = "../stores/store_google" }
store_local = { path = "../stores/store_local" }
store_minio = { path = "../stores/store_minio" }
store_sftp = { path = "../stores/store_sftp" }
tempfile = { version = "3.7.1" }
thiserror = "2.0.7"
ulid = "1.1.2"
uuid = { version = "1.1.2", features = ["serde", "v4", "v5"] }
whoami = "2.0.2"
xid = "1.0.0"

[target.'cfg(unix)'.dependencies]
xattr = "1.0.0"

[dev-dependencies]
mockall = "0.14.0"
rocksdb = "0.24.0"
serial_test = "3.0.0"
