[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "zorigami"
path = "src/main.rs"

[dependencies]
actix = "0.13.0"
actix-cors = "0.7.0"
actix-files = "0.6.0"
actix-rt = "2.8.0"
actix-web = "4.3.0"
anyhow = { workspace = true }
data-encoding = "2.10.0"
blake3 = "1.5.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
ciborium = "0.2.2"
database_core = { path = "../database/database_core" }
database_rocks = { path = "../database/database_rocks" }
dotenvy = { workspace = true }
env_logger = "0.11.0"
exaf-rs = "2.0.0"
fastcdc = "4.0.0"
globset = "0.4.13"
hashed-array-tree = "1.2.0"
juniper = { version = "0.17.0", features = ["chrono", "schema-language"] }
libc = "0.2.119"
log = "0.4.30"
memmap2 = "0.9.4"
os_str_bytes = { version = "7.0.0", features = ["conversions"] }
rand = { workspace = true }
reducer = "3.0"
rusqlite = { version = "0.40", features = ["bundled"] }
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.79"
sha1 = "0.11.0"
store_amazon = { path = "../stores/store_amazon" }
store_azure = { path = "../stores/store_azure" }
store_core = { path = "../stores/store_core" }
store_google = { path = "../stores/store_google" }
store_local = { path = "../stores/store_local" }
store_minio = { path = "../stores/store_minio" }
store_sftp = { path = "../stores/store_sftp" }
tempfile = { workspace = true }
thiserror = { workspace = true }
ulid = "1.1.2"
uuid = { workspace = true, features = ["serde", "v4", "v5"] }
whoami = "2.0.2"
xid = { workspace = true }

[target.'cfg(unix)'.dependencies]
xattr = "1.0.0"

[dev-dependencies]
mockall = "0.14.0"
rocksdb = { workspace = true }
serial_test = { workspace = true }
