[package]
name = "store_amazon"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.55"
bytes = "1.0"
futures = "0.3"
rand = "0.10.0"
rusoto_core = "0.48.0"
rusoto_credential = "0.48.0"
rusoto_dynamodb = "0.48.0"
rusoto_s3 = "0.48.0"
store_core = { path = "../store_core" }
thiserror = "2.0.7"
tokio = { version = "1.46.1", features = ["fs", "rt-multi-thread", "time"] }
uuid = { version = "1.1.2", features = ["v4"] }

[dev-dependencies]
dotenvy = "0.15.7"
tempfile = "3.7.1"
xid = "1.0.0"
