[package]
name = "store_amazon"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-dynamodb = "1"
aws-sdk-s3 = { workspace = true }
rand = { workspace = true }
store_core = { path = "../store_core" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "time"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
dotenvy = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
xid = { workspace = true }
