[package]
name = "store_azure"
version = "0.1.0"
authors = ["Nathan Fiedler <nathanfiedler@fastmail.fm>"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.55"
azure_core = "0.21.0"
azure_storage = "0.21.0"
azure_storage_blobs = "0.21.0"
bytes = "1.0"
dotenv = "0.15.0"
futures = "0.3"
md-5 = "0.10.5"
store_core = { path = "../store_core" }
tempfile = "3.7.1"
tokio = { version = "1.24.2", features = ["fs", "rt-multi-thread", "time"] }
xid = "1.0.3"
