[package]
name = "store_azure"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.55"
azure_core = "1"
azure_identity = "1"
azure_storage_blob = "1"
bytes = "1.0"
futures = "0.3"
md-5 = "0.11.0"
store_core = { path = "../store_core" }
tokio = { version = "1.46.1", features = ["fs", "rt-multi-thread", "time"] }
xid = "1.0.3"

[dev-dependencies]
dotenvy = "0.15.7"
tempfile = "3.7.1"
