[package]
name = "store_azure"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
azure_core = "1"
azure_identity = "1"
azure_storage_blob = "1"
bytes = "1.0"
futures = "0.3"
md-5 = { workspace = true }
store_core = { path = "../store_core" }
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "time"] }
xid = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
tempfile = { workspace = true }
