[package]
name = "store_google"
version = "0.2.0"
authors = ["Nathan Fiedler <nathanfiedler@fastmail.fm>"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.55"
base64 = "0.22.1"
google-firestore1 = "6.0.0"
google-storage1 = "6.0.0"
http-body-util = "0.1.2"
md-5 = "0.10.1"
serde = "1.0.182"
store_core = { path = "../store_core" }
thiserror = "2.0.7"
tokio = { version = "1.24.2", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread"] }
uuid = { version = "1.1.2", features = ["v4"] }

[dev-dependencies]
dotenv = "0.15"
tempfile = "3.7.1"
xid = "1.0.0"
