[package]
name = "store_google"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = "0.22.1"
google-firestore1 = "7.0.0"
google-storage1 = "7.0.0"
http-body-util = "0.1.2"
md-5 = { workspace = true }
yup-oauth2 = { version = "12.1", features = ["service-account"] }
serde = { workspace = true }
store_core = { path = "../store_core" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt", "rt-multi-thread"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
dotenvy = { workspace = true }
rustls = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
xid = { workspace = true }
