[package]
name = "store_minio"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.55"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-s3 = "1"
store_core = { path = "../store_core" }
tokio = { version = "1.46.1", features = ["fs", "rt-multi-thread", "time"] }
uuid = { version = "1.1.2", features = ["v4"] }

[dev-dependencies]
dotenvy = "0.15.7"
tempfile = "3.7.1"
xid = "1.0.0"
