[package]
name = "store_minio"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-s3 = { workspace = true }
store_core = { path = "../store_core" }
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "time"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
dotenvy = { workspace = true }
tempfile = { workspace = true }
xid = { workspace = true }
