[package]
name = "store_sftp"
version = "0.1.0"
authors = ["Nathan Fiedler <nathanfiedler@fastmail.fm>"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.55"
ssh2 = "0.9.4"
store_core = { path = "../store_core" }

[dev-dependencies]
dotenvy = "0.15.7"
tempfile = "3.7.1"

[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10" }

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
