[package]
name = "store_sftp"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.55"
ssh2 = "0.9.4"
store_core = { path = "../store_core" }

[dev-dependencies]
dotenvy = "0.15.7"
tempfile = "3.7.1"

[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10" }

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
