[package]
name = "store_sftp"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
ssh2 = "0.9.4"
store_core = { path = "../store_core" }

[dev-dependencies]
dotenvy = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(windows)'.dependencies]
openssl = { workspace = true }

[target.'cfg(unix)'.dependencies]
openssl = { workspace = true, features = ["vendored"] }
